cabal-version:      3.0
name:               zurihac2026-dependent-types
version:            0.1.0.0
-- synopsis:
-- description:
-- license:            BSD-3-Clause
-- license-file:       LICENSE
author:             Jacob Prud'homme
maintainer:         2160185+jacobprudhomme@users.noreply.github.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.2.0
    hs-source-dirs:   src
    default-language: GHC2024

executable zurihac2026-dependent-types
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.2.0,
        zurihac2026-dependent-types

    hs-source-dirs:   app
    default-language: GHC2024
